samples/_failures_safe/1761604328_64afc0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba334fb2.c: In function ‘main’:
./samples/SAFE/__tmp_ba334fb2.c:174:5: error: expected declaration or statement at end of input
  174 |     }
      |     ^
